new file:   package-lock.json 	modified:   src/pages/index.astro  Untracked files: 	commit/

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,6 +14,8 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 		<Header />
 		<main>
 			<h1>🧑‍🚀 Hello, Astronaut!</h1>
+			<h1>This is a test about the official tutorial blog</h1>
+			<h1>This is a new start!</h1>
 			<p>
 				Welcome to the official <a href="https://astro.build/">Astro</a> blog starter template. This
 				template serves as a lightweight, minimally-styled starting point for anyone looking to build
