--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -9,13 +9,7 @@ import Layout from '../layouts/BlogPost.astro';
 	heroImage="/blog-placeholder-about.jpg"
 >
 	<p>
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-		labore et dolore magna aliqua. Vitae ultricies leo integer malesuada nunc vel risus commodo
-		viverra. Adipiscing enim eu turpis egestas pretium. Euismod elementum nisi quis eleifend quam
-		adipiscing. In hac habitasse platea dictumst vestibulum. Sagittis purus sit amet volutpat. Netus
-		et malesuada fames ac turpis egestas. Eget magna fermentum iaculis eu non diam phasellus
-		vestibulum lorem. Varius sit amet mattis vulputate enim. Habitasse platea dictumst quisque
-		sagittis. Integer quis auctor elit sed vulputate mi. Dictumst quisque sagittis purus sit amet.
+		一個 20 歲的 Web 前端工程師，喜歡研究新技術，也喜歡分享自己的學習心得。
 	</p>
 
 	<p>
