--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,6 +13,10 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 	<body>
 		<Header />
 		<main>
+			<a href="/">首页</a>
+			<a href="/about/">关于</a>
+			<a href="./blog">文章</a>
+
 			<h1>🧑‍🚀 Hello, Astronaut!</h1>
 			<h1>This is a test about the official tutorial blog</h1>
 			<h1>This is a new start!</h1>
