--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,17 +1,35 @@
 ---
 import Layout from '../layouts/BlogPost.astro';
+
+const pageTitle = "About Me";
+
+const identity = {
+  firstName: "Gary",
+  country: "Taiwan",
+  occupation: "Technical Writer",
+  hobbies: ["photography", "birdwatching", "baseball"],
+};
+
+const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Writing Docs"];
+
+const happy = true;
+const finished = false;
+const goal = 3;
+
+const skillcolor = "navy";
 ---
 
 <Layout
-	title="關於我"
+	title=關於我
 	description="Lorem ipsum dolor sit amet"
 	pubDate={new Date('August 08 2021')}
 	heroImage="/blog-placeholder-about.jpg"
->
+>	
+	<title>{pageTitle}</title>
 	<p>
-		一個 20 歲的 Web 前端工程師，喜歡研究新技術，也喜歡分享自己的學習心得。
+		一個 FW。
 	</p>
-
+	<img src="/huh.gif" height="50" alt="a cat">
 	<p>
 		Morbi tristique senectus et netus. Id semper risus in hendrerit gravida rutrum quisque non
 		tellus. Habitasse platea dictumst quisque sagittis purus sit amet. Tellus molestie nunc non
@@ -53,4 +71,28 @@ import Layout from '../layouts/BlogPost.astro';
 		ac. Blandit libero volutpat sed cras. Nec tincidunt praesent semper feugiat nibh sed pulvinar
 		proin gravida. Egestas integer eget aliquet nibh praesent tristique magna.
 	</p>
+	<p>Here are a few facts about me:</p>
+	<ul>
+  	<li>My name is {identity.firstName}.</li>
+  	<li>I live in {identity.country} and I work as a {identity.occupation}.</li>
+ 	{identity.hobbies.length >= 2 &&
+    <li>Two of my hobbies are: {identity.hobbies[0]} and {identity.hobbies[1]}</li>
+  }
+	</ul>
+	<p>My skills are:</p>
+	<ul>
+ 	{skills.map((skill) => <li class="skill">{skill}</li>)}
+	</ul>
+	{happy && <p>I am happy to be learning Astro!</p>}
+
+	{finished && <p>I finished this tutorial!</p>}
+
+	{goal === 3 ? <p>My goal is to finish in 3 days.</p> : <p>My goal is not 3 days.</p>}
 </Layout>
+<style define:vars="{{skillcolor}}">
+	.skill {
+		color: #0000ff;
+		color: var(--skillcolor);
+	}
+
+</style>
